# sentinel3

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README-template.md  README.md  docker_env  environment.yml  requirements-dev.txt  setup.cfg
docker/: Dockerfile-script-runner
docs/: installation_and_basic_usage.ipynb
examples/: S3A_OL_1_EFR_20211021T073827_20211021T074112_0164_077_334_4320.json  S3A_OL_1_EFR____20210820T103153_20210820T103453_20210820T124206_0179_075_222_2160_LN1_O_NR_002.json  S3A_OL_1_EFR____20211021T073827_20211021T074112_20211021T091357_0164_077_334_4320_LN1_O_NR_002.json  S3A_OL_2_LFR_20210523T003029_20210523T003329_0179_072_102_1980.json  S3A_OL_2_LFR____20180105T002409_20180105T002540_20180106T053045_0090_026_216_2069_LN1_O_NT_002.json  S3A_OL_2_LFR____20210523T003029_20210523T003329_20210524T050403_0179_072_102_1980_LN1_O_NT_002.json  S3A_OL_2_WFR_20210604T001016_20210604T001316_0179_072_273_1440.json  S3A_OL_2_WFR____20201006T012547_20201006T012847_20201007T100122_0180_063_302_3060_MAR_O_NT_002.json  S3A_OL_2_WFR____20210604T001016_20210604T001316_20210604T021918_0179_072_273_1440_MAR_O_NR_003.json  S3A_SL_1_RBT_20210930T220914_20210930T221214_0180_077_043_5400.json  S3A_SL_1_RBT____20210827T074336_20210827T074636_20210827T094954_0179_075_320_3060_LN2_O_NR_004.json  S3A_SL_1_RBT____20210930T220914_20210930T221214_20211002T102150_0180_077_043_5400_LN2_O_NT_004.json  S3A_SL_2_FRP_20210802T000420_20210802T000720_0179_074_344_2880.json  S3A_SL_2_FRP____20201104T001225_20201104T001525_20201105T060455_0179_064_330_1800_LN2_O_NT_004.json  S3A_SL_2_FRP____20210802T000420_20210802T000720_20210803T123912_0179_074_344_2880_LN2_O_NT_004.json  S3A_SL_2_LST_20210510T002955_20210510T003255_0179_071_301_5760.json  S3A_SL_2_LST____20180104T004105_20180104T022205_20180930T071122_6059_026_202______LR1_R_NT_003.json  S3A_SL_2_LST____20210510T002955_20210510T003255_20210511T101010_0179_071_301_5760_LN2_O_NT_004.json  S3A_SL_2_WST____20190505T045344_20190505T063444_20190506T134130_6059_044_204______MAR_O_NT_003.json  S3A_SR_2_LAN_20210611T011438_20210611T012436_0598_072_373.json  S3A_SR_2_LAN____20201003T195855_20201003T204924_20201028T210401_3029_063_270______LN3_O_NT_004.json  S3A_SR_2_LAN____20210611T011438_20210611T012436_20210611T024819_0598_072_373______LN3_O_NR_004.json  S3A_SR_2_WAT_20210704T012815_20210704T021455_2800_073_316.json  S3A_SR_2_WAT____20190326T011836_20190326T020243_20190420T170416_2647_043_017______MAR_O_NT_003.json  S3A_SR_2_WAT____20210704T012815_20210704T021455_20210729T173140_2800_073_316______MAR_O_NT_004.json  S3A_SY_2_AOD____20201119T153545_20201119T162000_20201120T223531_2655_065_168______LN2_O_NT_002.json  S3A_SY_2_SYN_20210325T005418_20210325T005718_0180_070_031_1620.json  S3A_SY_2_SYN____20190202T004600_20190202T004900_20190203T142947_0179_041_045_2700_LN2_O_NT_002.json  S3A_SY_2_SYN____20210325T005418_20210325T005718_20210325T142858_0180_070_031_1620_LN2_O_ST_002.json  S3A_SY_2_V10_20210911T000000_20210920T235959_EUROPE.json  (+18 more)
(+269 files in other folders)
