[metadata]
name = stactools-sentinel3
version = attr: stactools.sentinel3.__version__
description = Stactools package for Sentinel-3 OLCI (level 1 EFR, ERR and level 2 LFR, LRR, WFR) and SLSTR (level 1 RBT and level 2 FRP, LST, WST) scenes
long_description = file: README.md
long_description_content_type = text/markdown
author = Chung-Xiang Hong & William Ray
author_email = chung.horng@sinergise.com & william.ray@sinergise.com
url = https://github.com/chorng/sentinel3
project_urls =
    Issues = https://github.com/chorng/sentinel3/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    sentinel
    OLCI
    EFR
    ERR
    LFR
    LRR
    WFR
    SLSTR
    RBT
    FRP
    LWT
    WST
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1

[options.packages.find]
where = src
